# Master-Thesis

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench.sh  input.csv  input_compress_dark_b_increase.csv  input_compress_dark_d_increase.csv  input_compress_dark_n_cores.csv  input_compress_dark_n_full_increase.csv  input_compress_dark_n_increase.csv  input_compress_dark_n_tab_increase.csv  input_compress_dark_nb_full_increase.csv  input_compress_dark_nb_increase.csv  input_compress_dark_nb_tab_increase.csv  input_compress_seq_b_increase.csv  input_compress_seq_d_increase.csv  input_compress_seq_n_increase.csv  input_decompress_dark_d_increase.csv  input_decompress_dark_n_cores.csv  input_decompress_dark_n_full_increase.csv  input_decompress_dark_n_increase.csv  input_decompress_dark_n_tab_increase.csv  input_decompress_seq_d_increase.csv  input_decompress_seq_n_increase.csv  input_eigen_n_cores.csv  input_eigen_n_increase.csv  job.py  py.py  temp.py
Prototype/: main.py
benchmark/: benchmark_compressed_mul.cpp  benchmark_compressed_mul.hpp  benchmark_json.cpp  benchmark_json.hpp  input_generator.cpp  temp.cpp
prototype/: compressed_mul.py  hashing.py  test_variance.py
src/: benchmark_timer.cpp  benchmark_timer.hpp  compressed_mul.cpp  compressed_mul.h  compressed_mul.hpp  cov_estimation.cpp  fft.cpp  fft.hpp  function.hpp  hashing.cpp  hashing.hpp  main.cpp  utils.cpp  utils.hpp  variance.cpp  variance.hpp
test/: test.cpp  test_compressed_mul.cpp  test_compressed_mul.hpp  test_hashing.cpp
